5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1745_1537.log
== TEST (2019-05-15 14:04:12) 
-- CODE:
from math import *

x = float(input(":"))
k = int(input(":"))

soma = 0
i = 0

while(i < k):
	soma = soma + (x**i/(factorial(i)))
	i = i + 1
print(soma)
-- OUTPUT:
3.7768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:04:57) 
-- CODE:
from math import *

x = float(input(":"))
k = int(input(":"))

soma = 0
i = 0

while(i < k):
	soma = soma + (x**i/(factorial(i)))
	i = i + 1
print(round(soma, 9)
-- ERROR:
File "XXXX", line 13
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:05:07) 
-- CODE:
from math import *

x = float(input(":"))
k = int(input(":"))

soma = 0
i = 0

while(i < k):
	soma = soma + (x**i/(factorial(i)))
	i = i + 1
print(round(soma,9))
-- OUTPUT:
3.7768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:05:15) 
-- CODE:
from math import *

x = float(input(":"))
k = int(input(":"))

soma = 0
i = 0

while(i < k):
	soma = soma + (x**i/(factorial(i)))
	i = i + 1
print(round(soma,9))
-- EXECUTION TIME:
0.163107
-- TEST CASE 1:
---- input:
1.56
3
---- correct output:
3.7768
---- user output:
3.7768
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
1.851921333
---- user output:
1.851921333
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
1.56
---- user output:
1.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
